--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <!--Cloudstack Links-->
             <h2>Cloudstack Links</h2>
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://krcstackblogs2.github.io/The-Complete-Guide-of-AI-Answering-Services-for-Businesses/">https://krcstackblogs2.github.io/The-Complete-Guide-of-AI-Answering-Services-for-Businesses/</a><br>
+                <a target="_bLank" href="https://ringwise.s3.us-east-005.backblazeb2.com/The+Complete+Guide+of+AI+Answering+Services+for+Businesses/index.html">https://ringwise.s3.us-east-005.backblazeb2.com/The+Complete+Guide+of+AI+Answering+Services+for+Businesses/index.html</a><br>
+                <a target="_bLank" href="https://gleaming-kangaroo-e50cc5.netlify.app/">https://gleaming-kangaroo-e50cc5.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
